--- a/src/app/pages/carrequets/carrequets.component.scss
+++ b/src/app/pages/carrequets/carrequets.component.scss
@@ -1,4 +1,6 @@
 .table-container {
+  overflow-x: hidden;
+  width: 100%;
   width: 94%;
   background: #fff;
   border-radius: 10px;
