--- a/src/app/pages/driversdatabase/driversdatabase.component.scss
+++ b/src/app/pages/driversdatabase/driversdatabase.component.scss
@@ -1,4 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 .table-container {
+  overflow-x: hidden;
+  width: 100%;
   width: 94%;
   background: #fff;
   border-radius: 10px;
